# smart-city

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: 1_route_map.html  2_routes_map.html  coordinates.txt  distance_matrix.txt  osrm_route_map.html
docker/initdb/: 01_my_all_in_one_dump.sql
notebooks/: analysis_emptying_data.ipynb  bin_full_prediction_model.ipynb  create_test_data.ipynb  distance_matrix.ipynb  osmr_distance_matrix.ipynb  routenplanung.ipynb  routenplanung_full.ipynb  test_bin_prediction.ipynb
notebooks/lib/: bin.py  consts.py  utils.py
notebooks/models/RegressionModel/metadata/: part-00000
notebooks/models/RegressionModel/stages/0_StringIndexer_37f66e12407e/data/: part-00000-bbd40e97-f20e-454b-b1cb-7bd259ac672f-c000.snappy.parquet
notebooks/models/RegressionModel/stages/0_StringIndexer_37f66e12407e/metadata/: part-00000
notebooks/models/RegressionModel/stages/1_OneHotEncoder_934025612a47/metadata/: part-00000
notebooks/models/RegressionModel/stages/2_VectorAssembler_43f6cbbf80b7/metadata/: part-00000
notebooks/models/RegressionModel/stages/3_RandomForestRegressor_7e2ca17565ae/data/: part-00000-642aefeb-4800-4bb4-8085-5b1cb7b677b6-c000.snappy.parquet
notebooks/models/RegressionModel/stages/3_RandomForestRegressor_7e2ca17565ae/metadata/: part-00000
notebooks/models/RegressionModel_2/metadata/: part-00000
notebooks/models/RegressionModel_2/stages/0_StringIndexer_7e72e947b542/metadata/: part-00000
notebooks/models/RegressionModel_3/metadata/: part-00000
scripts/: create_test_data.py
(+14 files in other folders)
