[project]
name = "special-week-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry]
name = "special-week-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
folium = ">=0.18.0"
pandas = ">=2.2.3"
pyproj = ">=3.7.0"
streamlit = ">=1.40.0"
streamlit-folium = ">=0.23.1"
pyspark = "^3.5.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
geopandas = "^1.0.1"
jupyter = "^1.1.1"
polyline = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
